# dw-enel-databricks-like

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  RTK.md  pyproject.toml
.streamlit/: config.toml
airflow/dags/: dag_dbt.py  dag_erro_leitura.py  dag_ingestion.py  dag_mis_executivo.py  dag_ml_features.py  dag_ml_monitoring.py  dag_ml_scoring.py  dag_ml_training.py  dag_quality.py  dag_test_pipeline.py  dag_transformation.py
airflow/plugins/: __init__.py
apps/streamlit/: erro_leitura_dashboard.py  theme.py
apps/web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.streamlit.config.ts
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/: current_timestamp.sql  generate_surrogate_key.sql
dbt/models/: sources.yml
dbt/seeds/: README.md
docs/: CONTRIBUTING.md  ENV.md  Estrategia_IA_MIS.md  RUNBOOK.md  SHARE_DASHBOARD.md
docs/api/: 01-fastapi-design.md  aggregations.md
docs/architecture/: 01-architecture-overview.md  02-tech-stack.md  03-hardware-sizing.md  04-data-flow.md
docs/business-rules/: 01-business-glossary.md  02-acf-asf-rules.md  03-operational-metrics.md  04-data-sources.md  taxonomia-v3-validation.md  taxonomia-v3.md
docs/implementation/: 01-sprints-1-6-status.md  02-sprint-1-6-traceability-matrix.md  03-discovery-register.md  04-sprints-7-12-status.md  05-sprint-7-12-traceability-matrix.md  06-sprint-13-erros-leitura-status.md  data-extraction-strategy.md
docs/ml/: 01-model-selection.md  02-feature-engineering.md  03-mlops-strategy.md
docs/rag/: 01-regional-scope.md  02-evaluation.md  03-prompt-playbook.md  04-known-question-cache.md
docs/sprints/: 00-sprint-overview.md  sprint-01-discovery.md  sprint-02-foundation-infra.md  sprint-03-processing.md  sprint-04-bronze.md  sprint-05-silver.md  sprint-06-quality.md  sprint-07-gold.md  sprint-08-bi.md  sprint-09-fastapi.md  sprint-10-ml-infra.md  sprint-11-ml-models.md  sprint-12-mlops-observability.md  sprint-13-erros-leitura-ia.md  sprint-14-ux-excelencia.md  (+13 more)
infra/: docker-compose.dev.yml  docker-compose.full.yml  docker-compose.ml.yml  docker-compose.share.override.yml  docker-compose.share.yml  docker-compose.yml
rust/: Cargo.toml
rust/enel_core/: Cargo.toml  pyproject.toml
rust/enel_core/src/: aggregate.rs  bm25.rs  cache.rs  hash_embed.rs  lib.rs  onnx_embed.rs  parquet_io.rs
scripts/: __init__.py  analyze_rag_telemetry.py  benchmark_rag_api_embeddings.py  bootstrap_sql.py  build_descricoes_corpus.py  build_rag_corpus.py  cache_warmup.py  check_drift.py  generate_sample_data.py  materialize_features.py  normalize_erro_leitura.py  profile_dashboard_cache.py  promote_positive_cache.py  rag_continuous_learning.py  rag_eval.py  rag_eval_regional.py  rag_prepare_training_data.py  rebuild_rag_corpus_regional.py  relabel_erro_leitura.py  run_ingestion.py  run_transformation.py  score_models.py  seed_dim_tempo.py  setup_minio_buckets.py  setup_mlflow.py  share_dashboard.sh  simulate_load_test.py  smoke_sp_severidade.py  train_embedding_cpu.py  train_erro_leitura.py  train_models.py
src/: __init__.py
tests/: conftest.py
(+380 files in other folders)
