[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dw-enel-databricks-like"
version = "0.1.0"
description = "Open-source lakehouse analytics platform for ENEL."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "boto3>=1.37,<2.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "PyYAML>=6.0,<7.0",
  "structlog>=25.1,<26.0",
  "tenacity>=9.0,<10.0",
  "chromadb (>=1.5.7,<2.0.0)",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2.0",
  "pre-commit>=4.2,<5.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.11,<0.12",
]
platform = [
  "apache-airflow>=2.9,<3.0",
  "great-expectations>=1.0,<2.0",
  "pyspark>=3.5,<4.0",
  "trino[sqlalchemy]>=0.333,<1.0",
]
ml = [
  "bertopic>=0.16,<1.0",
  "hdbscan>=0.8,<1.0",
  "joblib>=1.4,<2.0",
  "lightgbm>=4.5,<5.0",
  "mlflow>=2.15,<3.0",
  "numpy>=1.26,<2.0",
  "openpyxl>=3.1,<4.0",
  "pandas>=2.2,<3.0",
  "scipy>=1.14,<2.0",
  "scikit-learn>=1.5,<2.0",
  "sentence-transformers>=3.0,<4.0",
  "shap>=0.45,<0.46",
  "umap-learn>=0.5,<1.0",
  "xgboost>=2.1,<3.0",
]
api = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "prometheus-fastapi-instrumentator>=7.1,<8.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "python-multipart>=0.0.12,<1.0",
  "slowapi>=0.1.9,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]
viz = [
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<3.0",
  "plotly>=5.24,<6.0",
  "scikit-learn>=1.5,<2.0",
  "streamlit>=1.39,<2.0",
]
rag = [
  "chromadb>=1.5.7,<2.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
